<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_40sdp"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/banner_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_2sdp"
        android:background="@color/white"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/ad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/button_install"
            android:padding="@dimen/_2sdp"
            android:text="AD"
            android:textColor="@color/white"
            android:textSize="@dimen/_7sdp"
            tools:ignore="HardcodedText" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_toStartOf="@+id/install"
            android:layout_toEndOf="@+id/ad"
            android:gravity="center"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/icons"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

                <RelativeLayout
                    android:id="@+id/banner_progress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#D3D3D3"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/sans_regular"
                        android:gravity="center"
                        android:text="Ad"
                        android:textColor="#555555"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal"
                        tools:ignore="HardcodedText" />

                    <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:indeterminateDrawable="@drawable/sp_progress" />

                </RelativeLayout>

            </RelativeLayout>


            <LinearLayout
                android:id="@+id/content_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_medium"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/banner_ad_title"
                    android:textColor="@color/color_banner_text_title"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="normal" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables,UselessParent">

                    <ImageView
                        android:id="@+id/ic_download"
                        android:layout_width="@dimen/_12sdp"
                        android:layout_height="@dimen/_12sdp"
                        android:background="@drawable/ic_download"
                        android:backgroundTint="@color/color_rating_dark"
                        android:contentDescription="@string/todo" />

                    <TextView
                        android:id="@+id/app_download"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:fontFamily="@font/sans_regular"
                        android:gravity="center"
                        android:text="@string/banner_ad_downloads"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/app_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sans_medium"
                    android:lines="1"
                    android:text="@string/play_now_for_free"
                    android:textColor="@color/color_banner_text_title"
                    android:textSize="@dimen/_11sdp"
                    android:textStyle="normal" />


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRatingBar
                        android:id="@+id/ratingbar"
                        style="?android:attr/ratingBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:numStars="5"
                        android:rating="4.5"
                        android:theme="@style/RatingBarStyle"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/ratingCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_medium"
                        android:gravity="center"
                        android:lines="1"
                        android:text="(4.5)"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal"
                        tools:ignore="HardcodedText" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:background="@color/gray_dark" />


                    <TextView
                        android:id="@+id/free"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/sans_medium"
                        android:gravity="center"
                        android:lines="1"
                        android:text="@string/free"
                        android:textColor="@color/gray_dark"
                        android:textSize="@dimen/_10sdp"
                        android:textStyle="normal" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/install"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@color/button_install"
            android:gravity="center">

            <TextView
                android:id="@+id/install_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sans_regular"
                android:paddingLeft="@dimen/_20sdp"
                android:paddingRight="@dimen/_20sdp"
                android:text="@string/banner_install"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_15sdp" />


        </RelativeLayout>


    </RelativeLayout>


</FrameLayout>